# Smart-Secretary-Agent-Backend

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/ssa/: config.py  main.py
src/ssa/api/: router.py
src/ssa/api/v1/: __init__.py  auth.py  health.py
src/ssa/core/: security.py
src/ssa/db/: session.py
src/ssa/models/: user.py
src/ssa/services/: user.py
tests/: conftest.py  test_auth.py  test_health.py  test_security.py
