[project]
name = "ssa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
    "cz-conventional-plus>=1.0.3",
    "httpx>=0.28.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_plus"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
